tests/check/illegal_cute_pad.co
// RUN: not choreo -gs -n -t cute %s 2>&1 | FileCheck %s

#include "choreo.h"

__co__ auto pad(s32 [30, 60] input, int L1, int L2, int H1, int H2, int V) {
  s32[input.span(0)+L1+H1+1, input.span(1)+L2+H2] output;

  parallel p by 1 {
    input_s = dma.copy.async input => shared;
    wait input_s;

    dma.pad<{L1, L2}, {H1, H2}, {1, 0}, V> input_s.data => output;
  }
  return output;
}


int main() { /// host program
  auto a = choreo::make_spandata<choreo::s32>(30, 60);
  a.fill_random(-10, 10);
  // padding value
  int V = 11;

  // low
  int L1 = 2, L2 = 1;
  // high
  int H1 = 3, H2 = 2;
  auto res = pad(a.view(), L1, L2, H1, H2, V);

  choreo::choreo_assert(
    res.shape()[0] == a.shape()[0] + L1 + H1 && res.shape()[1] == a.shape()[1] + L2 + H2,
    "padding shape is wrong."
  );

  // (x1, y1) 
  int x1 = L1;
  int y1 = L2;
  // (x2, y2)
  int x2 = x1 + a.shape()[0] - 1;
  int y2 = y1 + a.shape()[1] - 1;


  // verfication
  for (size_t i = 0; i < res.shape()[0]; ++i)
    for (size_t j = 0; j < res.shape()[1]; ++j) {
      if (i>=x1 && i<=x2 && j>=y1 && j<=y2) {
        choreo::choreo_assert(a[i-x1][j-y1] == res[i][j], "values are not equal.");
      } else {
        choreo::choreo_assert(res[i][j] == V, "values are not equal.");
      }
    }
  std::cout << "Test Passed\n" << std::endl;
}

// CHECK: error: dma.pad with pad_mid is not supported for CuTe backend(must set pad_mid to 0).